--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@google-forms/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@google-forms/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@google-forms/form": ["libs/form/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
