--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,7 @@
     },
     "api": { "tags": [] },
     "api-interfaces": { "tags": [] },
-    "form": { "tags": [] }
+    "form": { "tags": [] },
+    "db-mongo": { "tags": [] }
   }
 }
