--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.12.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
