--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@google-forms/api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "@google-forms/form": ["libs/form/src/index.ts"]
+      "@google-forms/form": ["libs/form/src/index.ts"],
+      "@google-forms/db-mongo": ["libs/db-mongo/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
