--- a/nx.json
+++ b/nx.json
@@ -24,6 +24,7 @@
     "api": { "tags": [] },
     "api-interfaces": { "tags": [] },
     "form": { "tags": [] },
-    "db-mongo": { "tags": [] }
+    "db-mongo": { "tags": [] },
+    "types": { "tags": [] }
   }
 }
