--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
