adding validation and casting for req body, params and query params

--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,7 @@
     "api-interfaces": { "tags": [] },
     "form": { "tags": [] },
     "db-mongo": { "tags": [] },
-    "types": { "tags": [] }
+    "types": { "tags": [] },
+    "shared": { "tags": [] }
   }
 }
