--- a/libs/shared/.eslintrc.json
+++ b/libs/shared/.eslintrc.json
@@ -5,7 +5,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["libs/types/tsconfig.*?.json"]
+        "project": ["libs/shared/tsconfig.*?.json"]
       },
       "rules": {}
     },
