--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
     "styled-components": "5.2.1",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
